# wiz-arb

./: .gitignore  Makefile  pyproject.toml
docs/: PLAN.md  README.md
docs/research/: 01-eu261-legal-framework.md  02-delay-statistics-and-candidates.md  03-quantitative-model.md  04-feasibility-and-limitations.md
reports/: airline_p3h_2019.csv  airline_p3h_2020.csv  airline_p3h_2021.csv  airline_p3h_2022.csv  airline_p3h_2023.csv  airline_p3h_2024.csv  airline_p3h_2025.csv  backtest.md  backtest_trades.csv  base-rates.md  eligibility.md  ev.md  ev_ranked.csv  model-backtest.md  model_backtest_metrics.csv  paper.md  reliability_baseline.csv  reliability_gbm_calibrated.csv  reliability_logistic_calibrated.csv  routes_p3h_2025.csv  routes_p3h_monthly_2025.csv  shortlist.md  shortlist_2025.csv
src/wizarb/: __init__.py  cli.py  config.py
src/wizarb/analysis/: base_rates.py  shortlist.py
src/wizarb/backtest/: __init__.py  walkforward.py
src/wizarb/eligibility/: __init__.py  haircuts.py  report.py
src/wizarb/ev/: __init__.py  engine.py  portfolio.py  report.py
src/wizarb/fares/: assumptions.py
src/wizarb/features/: distance_bands.py
src/wizarb/ingest/: caa.py
src/wizarb/models/: __init__.py  calibration.py  features.py  ladder.py  walkforward.py
tests/: test_backtest.py  test_caa.py  test_eligibility.py  test_ev.py  test_models.py  test_shortlist.py
tests/fixtures/: caa_sample.csv
