[project]
name = "wizarb"
version = "0.1.0"
description = "EU261 delay-compensation EV research: data pipeline, probability models, backtest"
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "pyarrow>=16",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
wizarb = "wizarb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wizarb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
